--- a/part1/server/Makefile
+++ b/part1/server/Makefile
@@ -1,6 +1,6 @@
 CC	= gcc
 CFLAGS = -g -I../include 
-SERVER_OBJFILES = server.o network_functions.o
+SERVER_OBJFILES = server.o address_functions.o
 SERVER = server
 VPATH=../network ## Any path under the VPATH, whose paths are delimited by colons, are searched for cpp files that match .o files
 all: $(SERVER)
