--- a/part1/server/Makefile
+++ b/part1/server/Makefile
@@ -1,5 +1,5 @@
 CC	= gcc
-CFLAGS = -g -I../include 
+CFLAGS = -g -pthread -I../include 
 SERVER_OBJFILES = server.o address_functions.o
 SERVER = server
 VPATH=../network ## Any path under the VPATH, whose paths are delimited by colons, are searched for cpp files that match .o files
