Added multiple sessions

--- a/part1/server/Makefile
+++ b/part1/server/Makefile
@@ -1,6 +1,6 @@
 CC	= gcc
 CFLAGS = -g -pthread -I../include 
-SERVER_OBJFILES = server.o address_functions.o
+SERVER_OBJFILES = address_functions.o server_functions.o server.o 
 SERVER = server
 VPATH=../network ## Any path under the VPATH, whose paths are delimited by colons, are searched for cpp files that match .o files
 all: $(SERVER)
